--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-perplexity-ai
-requests
-fpdf
+google-generativeai==0.3.2
+reportlab==4.0.4
+flask==3.0.0
+requests==2.31.0
+gunicorn==21.2.0
